--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,55 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#board {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 300px;
+  flex-wrap: wrap;
+}
+
+.grid {
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 45px;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
 }
 
-.App-link {
-  color: #61dafb;
+.grid:hover {
+  background: #eee;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#game {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#head {
+  font-size: 25px;
+  padding: 15px;
+}
+
+.grid:nth-child(7), .grid:nth-child(8), .grid:nth-child(9) {
+    border-bottom: 0;
+}
+
+.grid:nth-child(1), .grid:nth-child(2), .grid:nth-child(3) {
+    border-top: 0;
+}
+
+.grid:nth-child(3n+1) {
+    border-left: 0;
+}
+
+.grid:nth-child(3n) {
+    border-right: 0;
 }
